--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
         android:background="@drawable/background"
         tools:context=".ui.activity.MainActivity">
 
@@ -21,6 +20,7 @@
             android:id="@+id/ivThumb"
             android:layout_width="0dp"
             android:layout_height="200dp"
+            android:src="@drawable/clear"
             android:background="@color/cardview_shadow_start_color"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/tvTempr"
