--- a/app/src/main/res/layout/raw_user.xml
+++ b/app/src/main/res/layout/raw_user.xml
@@ -18,8 +18,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/banner"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:background="@drawable/banner">
 
             <TextView
                 android:id="@+id/tvDay"
@@ -36,7 +36,7 @@
                 android:id="@+id/ivThumb"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@color/cardview_shadow_start_color"
+                android:src="@drawable/clear"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvDay" />
